components/immich/overlays/prod/postgresql-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: immich
spec:
  selector:
    app: immich-postgresql
  ports:
  - port: 5432
    targetPort: 5432
    name: postgresql
  type: ClusterIP
